<resources>
    <string name="app_name">SnackDispenser</string>

    <string name="action_about">About</string>
    <string name="action_check_stock">Check Stock</string>
    <string name="action_refill">Refill</string>
    <string name="action_help">Help</string>
    <string name="refill_nametitle">Snack</string>
    <string name="refill_amounttitle">#</string>
    <string name="refill_cancel">Cancel</string>
    <string name="refill_set">Refill</string>
    <string name="main_name">Snack</string>
    <string name="main_amount">Stock</string>
</resources>
