<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/action_refill"
        android:title="@string/action_refill"
        android:orderInCategory="1"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_check_stock"
        android:title="@string/action_check_stock"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
