<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50px"
            android:text="@string/refill_nametitle"
            android:id="@+id/refill_nametitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50px"
            android:text="@string/refill_amounttitle"
            android:layout_marginLeft="100px"
            android:id="@+id/refill_amounttitle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <NumberPicker
            android:id="@+id/refill_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <NumberPicker
            android:id="@+id/refill_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/refill_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refill_set"
            android:layout_toLeftOf="@+id/refill_cancel"
            android:layout_toStartOf="@+id/refill_cancel"
            android:layout_alignParentBottom="true" />

        <Button
            android:id="@+id/refill_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refill_cancel"
            android:layout_marginLeft="40px"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>

</LinearLayout>